# NIO-Diagnosis-Agent

./: .env.example  .gitignore  PROJECT_IMPLEMENTATION.md  README.md  pyproject.toml
data/: anomaly_logs.json  business_schema.json  historical_cases.csv  test_reports.json
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: DiagnosisReport.tsx  ExecutionLog.tsx  QuestionInput.tsx  StepIndicator.tsx
frontend/src/types/: events.ts
src/: __init__.py  config.py  graph.py  main.py
src/api/: routes.py  server.py
src/api/static/: index.html
src/api/static/assets/: index-BJqyptO5.css  index-BsYLK8IM.js  index-Cxcq2mzt.css  index-DR4ceZr8.js
src/nodes/: __init__.py  analyze_node.py  grade_node.py  log_fetch_node.py  retrieve_node.py  rewrite_node.py  rule_check_node.py
src/tools/: __init__.py  knowledge_retriever.py  log_fetcher.py  rule_validator.py
tests/: __init__.py  test_graph.py
